<resources>
        <string name="app_name">Imposto Calculator</string>
        <string name="cilindrada_value">Cilindrada:</string>
        <string name="mais_de_1_750_at_2_0_value">mais de 1.750 até 2.0</string>
        <string name="mais_de_1_250_at_1_750_value">mais de 1.250 até 1.750</string>
        <string name="at_1_250_value">Até 1.250</string>
        <string name="mais_de_2_500_value">mais de 2.500</string>
        <string name="co_value">CO:</string>
        <string name="at_120_Value">até 120</string>
        <string name="mais_de_120_at_180_value">mais de 120 até 180</string>
        <string name="mais_de_180_at_250_value">mais de 180 até 250</string>
        <string name="mais_de_250_value">mais de 250</string>
        <string name="calcular_iuc_Value">Calcular IUC</string>
        <string name="show_result_value">show_result</string>
        <string name="back_value">Back_value</string>
</resources>


