<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rgroup_cilindrada">

            <TextView
                android:id="@+id/label_cilindrada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cilindrada_value" />

            <RadioButton
                android:id="@+id/cilindrada_ate_1250"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/at_1_250_value" />

            <RadioButton
                android:id="@+id/cilindrada_1250_até_1750"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mais_de_1_250_at_1_750_value" />

            <RadioButton
                android:id="@+id/cilindrada_1750_ate_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mais_de_1_750_at_2_0_value" />

            <RadioButton
                android:id="@+id/cilindrada_mais_2500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mais_de_2_500_value" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rgroup_co">

            <TextView
                android:id="@+id/label_co"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/co_value" />

            <RadioButton
                android:id="@+id/CO_ate_120"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/at_120_Value" />

            <RadioButton
                android:id="@+id/CO_120_ate_180"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mais_de_120_at_180_value" />

            <RadioButton
                android:id="@+id/CO_180_ate_250"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mais_de_180_at_250_value" />

            <RadioButton
                android:id="@+id/CO_mais_250"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mais_de_250_value" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btt_calcular"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="CalcularIUC"
            android:text="@string/calcular_iuc_Value" />

        <TextView
            android:id="@+id/show_calculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />
    </LinearLayout>
</LinearLayout>